--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@webgpu/types": "^0.1.40",
     "dat.gui": "^0.7.9",
+    "events": "^3.3.0",
     "stats.js": "^0.17.0"
   }
 }
