--- a/env/.env
+++ b/env/.env
@@ -1,7 +1,10 @@
-VITE_CA_TEXTURE_WIDTH = 2048
-VITE_CA_TEXTURE_HEIGHT = 4096
-VITE_CA_TEXTURE_COUNT = 2
+TCA_TEXTURE_WIDTH = 2048
+TCA_TEXTURE_HEIGHT = 4096
+TCA_TEXTURE_COUNT = 2
 
-VITE_MAX_ITERATIONS_PER_FRAME = 2048
+TCA_MAX_ITERATIONS_PER_FRAME = 2048
 
-VITE_TIMESTAMPS=false #chrome implementation is broken
+TCA_TIMESTAMPS=false #chrome implementation is broken
+
+TCA_INITIAL_RANGE = 1
+TCA_INITIAL_STATES = 2
