created initialization stage, feel another project structure issue coming up. the dynamic imports are a warning sign.

--- a/env/.env
+++ b/env/.env
@@ -2,6 +2,7 @@ TCA_TEXTURE_WIDTH = 2048
 TCA_TEXTURE_HEIGHT = 4096
 TCA_TEXTURE_COUNT = 2
 
+TCA_INIT_KERNEL_SIZE = 16 # The amount of states to initialize per work unit
 TCA_MAX_ITERATIONS_PER_FRAME = 2048
 
 TCA_TIMESTAMPS=false #chrome implementation is broken
