Refactored everything, initialize rule from compute shader, added details to readme, added mouse controls

--- a/env/.env
+++ b/env/.env
@@ -1,5 +1,5 @@
-TCA_TEXTURE_WIDTH = 2048
-TCA_TEXTURE_HEIGHT = 4096
+TCA_TEXTURE_WIDTH = 4097
+TCA_TEXTURE_HEIGHT = 3000
 TCA_TEXTURE_COUNT = 2
 
 TCA_INIT_KERNEL_SIZE = 16 # The amount of states to initialize per work unit
@@ -9,3 +9,10 @@ TCA_TIMESTAMPS=false #chrome implementation is broken
 
 TCA_INITIAL_RANGE = 1
 TCA_INITIAL_STATES = 2
+
+TCA_INIT_ZOOM = 4
+
+TCA_MIN_ZOOM = 0.5 # 2 cells per pixel
+TCA_MAX_ZOOM = 400 #
+
+TCA_SAMPLE_COUNT = 1
