added color map, debug

--- a/env/.env
+++ b/env/.env
@@ -1,4 +1,4 @@
-TCA_TEXTURE_WIDTH = 4097
+TCA_TEXTURE_WIDTH = 4096
 TCA_TEXTURE_HEIGHT = 3000
 TCA_TEXTURE_COUNT = 2
 
@@ -7,12 +7,22 @@ TCA_MAX_ITERATIONS_PER_FRAME = 2048
 
 TCA_TIMESTAMPS=false #chrome implementation is broken
 
+TCA_INITIAL_RULE_NUMBER = 6
 TCA_INITIAL_RANGE = 1
 TCA_INITIAL_STATES = 2
 
-TCA_INIT_ZOOM = 4
+TCA_MAX_RANGE = 6
+TCA_MAX_STATES = 6
 
+TCA_INIT_ZOOM = 4
 TCA_MIN_ZOOM = 0.5 # 2 cells per pixel
 TCA_MAX_ZOOM = 400 #
 
 TCA_SAMPLE_COUNT = 1
+
+TCA_INITIAL_COLOR_0 = 37,36,34,1
+TCA_INITIAL_COLOR_1 = 235,94,40,1
+TCA_INITIAL_COLOR_2 = 255,252,242,1
+TCA_INITIAL_COLOR_3 = 112,162,136,1
+TCA_INITIAL_COLOR_4 = 204,197,185,1
+TCA_INITIAL_COLOR_5 = 64,61,57,1
